misalignment on skinny screens fixed

--- a/source/css/stylesheet.css
+++ b/source/css/stylesheet.css
@@ -412,24 +412,30 @@ input[type=number] {
   th:nth-child(1),
   td:nth-child(1){
     margin: 0;
+	width: 5%;
   }
   th:nth-child(2),
   td:nth-child(2){
-    width: 50%;
+    width: 60%;
     text-align: left;
   }
   th:nth-child(3),
   td:nth-child(3){
-    width: 5%;
+    width: 10%;
   }
   th:nth-child(4),
   td:nth-child(4){
-    width: 5%;
+    width: 10%;
   }
 
-  th:nth-child(5),
-  td:nth-child(5){
+  th:nth-child(5){
+	  width: 10%;
+  }
+  
+  td:nth-child(5),
+  td:nth-child(6){
 	color: #fff;
+	width: 5%;
   }
 
 }
